--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -16,11 +18,32 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --font-monserrat: 'Monserrat', sans-serif;
+    --font-rethink: 'Rethink Sans', sans-serif;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:var(--font-rethink), Arial, Helvetica, sans-serif;
+}
+
+.about-me-container {
+  border-left: 3px solid white;
+  padding-left: 1 rem;
+}
+
+
+.about-me2-container {
+  border-left: 1px solid white;
+  padding-left: 10px;
+}
+
+.font-monserrat{
+  font-family: 'Monserrat', sans-serif;
+}
+
+.font-rethink{
+  font-family: 'Rethink', sans-serif;
 }
